# inekf_mini

./: .gitignore  CMakeLists.txt  package.xml
cassie_description/: CMakeLists.txt  README.md  package.xml
cassie_description/launch/: display.launch  display_torso.launch
cassie_description/rviz/: cassie.rviz
cassie_description/urdf/: cassie.urdf  cassie_with_base.urdf  cassie_with_torso.urdf  torso.urdf
config/: config.yaml
data/: contact.csv  encoders.csv  gt_att.csv  gt_pos.csv  gt_vel.csv  imu_acc.csv  imu_gyro.csv  shape.txt  time.csv
include/inEKF_mini/: cassie_kinematics_block.h
inekf_mini/: CMakeLists.txt
inekf_mini/include/inekf_mini/: correction.h  robot_state.h  types.h
inekf_mini/include/inekf_mini/math/: lie_group.hpp  welford.hpp
inekf_mini/src/: correction.cpp  propagation.cpp  robot_state.cpp
src/: cassie_fk.cpp  cassie_inekf_main.cpp  inekf_result.csv  main.cpp  plot.py
